css/widgets/notif.css
.notification {
	background-color: @base01;
	min-height: 100px;
	border-radius: 15px;
	min-width: 400px;
	padding: 7.5px;
	border: 2px solid @base0E;
}

.notification.critical {
	color: @base08;
}

.notification.low {
	opacity: 0.75;
	border: none;
}

.notification .notif-titleRow {
	padding: 7.5px 0;
	font-size: 16.5px;
}

.notification .notif-titleRow .notif-icon {
	padding-right: 10px;
}

.notification .notif-titleRow button {
	background-color: transparent;
	border-radius: 50%;
}

.notification .notif-body {
	padding-bottom: 10px;
}

.notification .notif-actions button {
	margin: 0px 5px;
	padding-right: 15px;
	padding-left: 15px;
}

